2006-02-19  Dennis Linse  <djlinse37@users.sourceforge.net>

	* missing: Add work-around for parsing bug that cannot handle the
	"--output=<foof>" option to makeinfo. See also the change below,
	which removes gnuplot.info from the default make target.
	Bug #1422925.

2006-02-19  Ethan A Merritt <merritt@u.washington.edu>

	* term/gd.trm (image_do_crop): Move libgd version 2 dependency
	inside conditional code segment. Bug #1434658.

	* docs/Makefile.in: Add an empty target for "install-exec", and
	remove gnuplot.info from the target "all".  These changes are needed
	in order for either a default "make" or "make install-exec" to 
	succeed on a system without emacs or makeinfo.
	Bug #1430819.
	Thanks to Dennis Linse  <djlinse37@users.sourceforge.net>
	
	Note: an alternative is not to use the .../missing script for
	makeinfo, or somehow make the fact that it's missing a non-fatal
	error.

2006-02-17  Bastian Maerkisch  <bmaerkisch@web.de>

	SF patch [ 1432890 ] Win: rotated text at arbitrary angles

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm: Rotated text at
	arbitrary angles for the windows terminals.

2006-02-16  Bastian Maerkisch  <bmaerkisch@web.de>

	SF patch [ 1384525 ] Small fixes to gd terminals

	* term/gd.trm: Fixes for Win32 to allow linking with bgd.dll or static.
	- Static linking with gdlib is now possible (again) on windows (NONDLL
	  is taken into account).
	- A new define GD_NEED_LOCAL_FONT_POINTERS is added. When defined
	  gd.trm will use local pointers to the fonts built into gdlib. This
	  is highly recommended by Mr. Boutell on Windows platforms. Currently
	  it is only activated on Windows when linking to bgd.dll.

2006-02-12  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/post.trm (PS_encode_image PS_image): Bug fix for the PostScript
	image using the five operand form (i.e., no palette). The bug was
	that the max colors was not set to 2^N, where N is 1, 2, 4, 8, or 12.